# FindToPlayDjango

./: .dockerignore  README.md  app.Dockerfile  compose.yml  db.sqlite3  manage.py  pyproject.toml  requirements.txt
FindToPlayDjango/: .dockerignore  asgi.py  settings.py  urls.py
app/FindToPlayDjango/: settings.py  urls.py  wsgi.py
app/events/: admin.py  models.py  serializers.py  urls.py  views.py
app/events/migrations/: 0001_initial.py  0003_rename_date_event_scheduled_at_and_more.py
app/users/migrations/: 0001_initial.py
db/: init.sql
events/: serializers.py  urls.py  views.py
events/migrations/: 0002_initial.py
infra/: app.Dockerfile
users/: apps.py  models.py
