[project]
name = "findtoplaydjango"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "appnope==0.1.4",
    "asgiref==3.8.1",
    "asttokens==2.4.1",
    "attrs==24.2.0",
    "backcall==0.2.0",
    "beautifulsoup4==4.12.3",
    "bleach==6.2.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "django-seed==0.3.1",
    "django==4.2.16",
    "djangorestframework==3.15.2",
    "docopt==0.6.2",
    "executing==2.1.0",
    "faker==30.8.0",
    "fastjsonschema==2.20.0",
    "idna==3.10",
    "importlib-metadata==8.5.0",
    "ipython==8.12.3",
    "jedi==0.19.2",
    "jinja2==3.1.4",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyterlab-pygments==0.3.0",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mistune==3.0.2",
    "nbclient==0.10.0",
    "nbconvert==7.16.4",
    "nbformat==5.10.4",
    "packaging==24.2",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==11.0.0",
    "pipreqs==0.5.0",
    "platformdirs==4.3.6",
    "prompt-toolkit==3.0.48",
    "psycopg2-binary==2.9.9",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.18.0",
    "python-dateutil==2.9.0.post0",
    "pyzmq==26.2.0",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rpds-py==0.21.0",
    "six==1.16.0",
    "soupsieve==2.6",
    "sqlparse==0.5.1",
    "stack-data==0.6.3",
    "tinycss2==1.4.0",
    "toposort==1.10",
    "tornado==6.4.2",
    "traitlets==5.14.3",
    "typing-extensions==4.12.2",
    "urllib3==2.2.3",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "yarg==0.1.9",
    "zipp==3.21.0",
    "python-dotenv>=1.0.1",
    "gunicorn>=23.0.0",
]
